--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,29 +27,37 @@
 
     <actions>
 
-        <!-- Add Ask question action to Tools Menu -->
-        <!-- icon="se-icon-16x16.jpg"-->
-        <action id="StackOverflow.AskQuestion.ToolsMenu"
-                class="com.refactormyself.open.AskQuestionAction"
-                text="Ask a Question on Stack Exchange"
-                description="Ask a Question on Stack Exchange">
-            <add-to-group group-id="ToolsMenu" anchor="last"/>
-        </action>
+        <group id="SaheedPlugsIn.SampleMenu" text="SE" description="Stack Exchange menu">
+            <add-to-group group-id="MainMenu" anchor="last"/>
+            <action id="SaheedPlugsIn.Textboxes"
+                    class="com.refactormyself.open.AskQuestionAction"
+                    text="Ask a Question on Stack Exchange"
+                    description="Ask a Question on Stack Exchange"/>
+        </group>
 
-        <!-- Add action to search Stack Overflow from file editor -->
-        <action id="StackOverflow.Search.Editor"
-                class="com.refactormyself.open.SearchAction"
-                text="Search on Stack Exchange"
-                description="Search on Stack Exchange">
-            <add-to-group group-id="EditorPopupMenu" anchor="last"/>
-        </action>
+<!--        &lt;!&ndash; Add Ask question action to Tools Menu &ndash;&gt;-->
+<!--        &lt;!&ndash; icon="se-icon-16x16.jpg"&ndash;&gt;-->
+<!--        <action id="StackOverflow.AskQuestion.ToolsMenu"-->
+<!--                class="com.refactormyself.open.AskQuestionAction"-->
+<!--                text="Ask a Question on Stack Exchange"-->
+<!--                description="Ask a Question on Stack Exchange">-->
+<!--            <add-to-group group-id="ToolsMenu" anchor="last"/>-->
+<!--        </action>-->
 
-        <!-- Add action to search Stack Overflow from console editor -->
-        <action id="StackOverflow.Search.Console"
-                class="com.refactormyself.open.SearchAction"
-                text="Search on Stack Exchange"
-                description="Search on Stack Exchange">
-            <add-to-group group-id="ConsoleEditorPopupMenu" anchor="last"/>
-        </action>
+<!--        &lt;!&ndash; Add action to search Stack Overflow from file editor &ndash;&gt;-->
+<!--        <action id="StackOverflow.Search.Editor"-->
+<!--                class="com.refactormyself.open.SearchAction"-->
+<!--                text="Search on Stack Exchange"-->
+<!--                description="Search on Stack Exchange">-->
+<!--            <add-to-group group-id="EditorPopupMenu" anchor="last"/>-->
+<!--        </action>-->
+
+<!--        &lt;!&ndash; Add action to search Stack Overflow from console editor &ndash;&gt;-->
+<!--        <action id="StackOverflow.Search.Console"-->
+<!--                class="com.refactormyself.open.SearchAction"-->
+<!--                text="Search on Stack Exchange"-->
+<!--                description="Search on Stack Exchange">-->
+<!--            <add-to-group group-id="ConsoleEditorPopupMenu" anchor="last"/>-->
+<!--        </action>-->
     </actions>
 </idea-plugin>
